src/main/java/com/example/steplang/errors/LanguageError.java
package com.example.steplang.errors;

import com.fasterxml.jackson.annotation.JsonValue;

public enum LanguageError {
    MISSING_KEY,
    LANGUAGE_ID_NOT_FOUND,
    LANGUAGE_AND_WORD_ID_NOT_FOUND,
    WORD_ID_NOT_FOUND,
    CATEGORY_ID_NOT_FOUND,
    ALREADY_EXISTS,
    WORD_FORM_ID_NOT_FOUND,
    COURSE_ID_NOT_FOUND,
    COURSE_MODULE_ID_NOT_FOUND,
    COURSE_MODULE_ID_ALREADY_EXISTS,
    COURSE_SUBMODULE_ID_NOT_FOUND,
    COURSE_SUBMODULE_ID_ALREADY_EXISTS
}
